small header spacing fix

--- a/style.css
+++ b/style.css
@@ -148,10 +148,10 @@ body {
 }
 
 .brand-links {
-  animation: marquee 60s linear infinite;
+  animation: marquee 120s linear infinite;
   display: flex;
   align-items: center;
-  gap: 5rem;
+  gap: 15rem;
   list-style: none;
   padding-bottom: 0.2rem;
   margin: 0;
